Working on fare prediction

--- a/taxi_fare/Fare Prediction.ipynb
+++ b/taxi_fare/Fare Prediction.ipynb
@@ -1174,7 +1174,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7a5c8087b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0d80f55550>"
       ]
      },
      "execution_count": 28,
@@ -1971,11 +1971,7 @@
      "text": [
       "Train on 711450 samples, validate on 237150 samples\n",
       "Epoch 1/10\n",
-      "711450/711450 [==============================] - 241s 339us/step - loss: 0.2436 - root_mean_squared_error: 0.2436 - convert_error: 2.8254 - val_loss: 0.1818 - val_root_mean_squared_error: 0.1818 - val_convert_error: 2.1136\n",
-      "Epoch 2/10\n",
-      "711450/711450 [==============================] - 240s 337us/step - loss: 0.2028 - root_mean_squared_error: 0.2028 - convert_error: 2.3754 - val_loss: 0.1774 - val_root_mean_squared_error: 0.1774 - val_convert_error: 2.1072\n",
-      "Epoch 3/10\n",
-      " 24480/711450 [>.............................] - ETA: 3:35 - loss: 0.1989 - root_mean_squared_error: 0.1989 - convert_error: 2.3138"
+      "196352/711450 [=======>......................] - ETA: 2:53 - loss: 0.3187 - root_mean_squared_error: 0.3187 - convert_error: 3.6019"
      ]
     }
    ],
@@ -2336,6 +2332,23 @@
    "outputs": [],
    "source": [
     "plot_history(model, 'root_mean_squared_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_predictions = model.predict(test)\n",
+    "preds = (np.exp(log_predictions) - 1).reshape((-1))\n",
+    "\n",
+    "submission = pd.DataFrame({'key': test_id,\n",
+    "                           'fare_amount': list(preds)})\n",
+    "\n",
+    "tmp_lnk = PATH/'tmp/sub_cyc.csv'\n",
+    "submission.to_csv(tmp_lnk, index = False)\n",
+    "FileLink(tmp_lnk)"
    ]
   },
   {
