--- a/taxi_fare/Cyclical Variable Encoding.ipynb
+++ b/taxi_fare/Cyclical Variable Encoding.ipynb
@@ -1609,7 +1609,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extract_dateinfo(df, date_col, drop=True, time=False, start_ref = pd.datetime(1900, 1, 1)):\n",
+    "    \"\"\"\n",
+    "    Extract Date Information from a DataFrame\n",
+    "    Adapted from: https://github.com/fastai/fastai/blob/master/fastai/structured.py\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "    \n",
+    "    # Extract the field\n",
+    "    fld = df[fldname]\n",
+    "    \n",
+    "    # Check the time\n",
+    "    fld_dtype = fld.dtype\n",
+    "    if isinstance(fld_dtype, pd.core.dtypes.dtypes.DatetimeTZDtype):\n",
+    "        fld_dtype = np.datetime64\n",
+    "\n",
+    "    # Convert to datetime if not already\n",
+    "    if not np.issubdtype(fld_dtype, np.datetime64):\n",
+    "        df[fldname] = fld = pd.to_datetime(fld, infer_datetime_format=True)\n",
+    "    \n",
+    "    \n",
+    "    targ_pre = re.sub('[Dd]ate', '', fldname)\n",
+    "    targ_pre = re.sub('[Tt]ime', '', targ_pre)\n",
+    "    \n",
+    "    attr = ['Year', 'Month', 'Week', 'Day', 'Dayofweek', 'Dayofyear',\n",
+    "            'Is_month_end', 'Is_month_start', 'Is_quarter_end', 'Is_quarter_start', 'Is_year_end', 'Is_year_start']\n",
+    "    # If time is specified, add extra columns\n",
+    "    if time: \n",
+    "        attr = attr + ['Hour', 'Minute', 'Second']\n",
+    "        \n",
+    "    # Iterate through each attribute\n",
+    "    for n in attr: \n",
+    "        df[targ_pre + n] = getattr(fld.dt, n.lower())\n",
+    "        \n",
+    "    if time:\n",
+    "        # Add fractional time of day\n",
+    "        df[targ_pre + 'FractimeDay'] = (df[targ_pre + 'Hour'] / 24) + (df[targ_pre + 'Minute'] / 60 / 24) + (df[targ_pre + 'Second'] / 60 / 60 / 24)\n",
+    "        \n",
+    "        # Add fractional time of week\n",
+    "        df[targ_pre + 'FractimeWeek'] = ((df[targ_pre + 'Dayofweek'] * 24) + (df[targ_pre + 'FractimeDay'] * 24)) / (7 * 24)\n",
+    "    \n",
+    "    # Add seconds since start of reference\n",
+    "    df[targ_pre + 'Elapsed'] = (fld - start_ref).dt.total_seconds()\n",
+    "    \n",
+    "    if drop: \n",
+    "        df = df.drop(fldname, axis=1)\n",
+    "        \n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
